--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,13 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.detail.DetailFragment">
 
-    <TextView
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textDetail"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageDetail" />
+
+            <TableLayout
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginTop="16dp"
+                android:stretchColumns="1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textDetail">
+
+                <TableRow android:layout_width="match_parent">
+
+                    <TextView
+                        android:layout_width="194dp"
+                        android:layout_column="1"
+                        android:padding="5dp"
+                        android:text="Önemli Bilgiler"
+                        android:textAlignment="center"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:textColor="@color/black" />
+                </TableRow>
+
+                <TableRow android:layout_width="match_parent">
+
+                    <TextView
+                        android:id="@+id/basTarih"
+                        android:layout_width="194dp"
+                        android:layout_column="1"
+                        android:padding="5dp"
+                        android:text="basTarih"
+                        android:textAlignment="center"
+                        android:textSize="14sp"
+                        android:textColor="@color/black"/>
+                </TableRow>
+
+                <TableRow android:layout_width="match_parent">
+
+                    <TextView
+                        android:id="@+id/sonTarih"
+                        android:layout_width="194dp"
+                        android:layout_column="1"
+                        android:padding="5dp"
+                        android:text="sonTarih"
+                        android:textAlignment="center"
+                        android:textSize="14sp"
+                        android:textColor="@color/black"/>
+                </TableRow>
+
+                <TableRow android:layout_width="match_parent">
+
+                    <TextView
+                        android:id="@+id/cekTarih"
+                        android:layout_width="194dp"
+                        android:layout_column="1"
+                        android:padding="5dp"
+                        android:text="cekTarih"
+                        android:textAlignment="center"
+                        android:textSize="14sp"
+                        android:textColor="@color/black"/>
+                </TableRow>
+
+                <TableRow android:layout_width="match_parent">
+
+                    <TextView
+                        android:id="@+id/ilnTarih"
+                        android:layout_width="194dp"
+                        android:layout_column="1"
+                        android:padding="5dp"
+                        android:text="ilnTarih"
+                        android:textAlignment="center"
+                        android:textSize="14sp"
+                        android:textColor="@color/black"/>
+                </TableRow>
+
+                <TableRow android:layout_width="match_parent">
+
+                    <TextView
+                        android:id="@+id/minharcama"
+                        android:layout_width="194dp"
+                        android:layout_column="1"
+                        android:padding="5dp"
+                        android:text="minharcama"
+                        android:textAlignment="center"
+                        android:textSize="14sp"
+                        android:textColor="@color/black"/>
+                </TableRow>
+
+                <TableRow android:layout_width="match_parent">
+
+                    <TextView
+                        android:id="@+id/hediyeDeger"
+                        android:layout_width="194dp"
+                        android:layout_column="1"
+                        android:padding="5dp"
+                        android:text="hediyeDeger"
+                        android:textAlignment="center"
+                        android:textSize="14sp"
+                        android:textColor="@color/black"/>
+                </TableRow>
+
+                <TableRow android:layout_width="match_parent">
+
+                    <TextView
+                        android:id="@+id/hediyeSayi"
+                        android:layout_width="194dp"
+                        android:layout_column="1"
+                        android:padding="5dp"
+                        android:text="hediyeSayi"
+                        android:textAlignment="center"
+                        android:textSize="14sp"
+                        android:textColor="@color/black"/>
+                </TableRow>
+
+
+            </TableLayout>
+
+            <ImageView
+                android:id="@+id/imageDetail"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_marginTop="8dp"
+                android:src="@drawable/ic_launcher_background"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textTitle" />
+
+            <TextView
+                android:id="@+id/textTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
