--- a/app/src/main/res/layout/recylerview_item.xml
+++ b/app/src/main/res/layout/recylerview_item.xml
@@ -24,7 +24,9 @@
                 android:layout_marginTop="12dp"
                 android:text="TextView"
                 android:textAlignment="center"
-                android:textSize="16sp"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +59,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="TextView"
+                android:textSize="14sp"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toEndOf="@+id/time_img"
                 app:layout_constraintTop_toTopOf="@+id/time_img" />
 
@@ -78,6 +82,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="TextView"
+                android:textSize="14sp"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toEndOf="@+id/gift_img"
                 app:layout_constraintTop_toTopOf="@+id/gift_img" />
 
@@ -99,6 +105,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="TextView"
+                android:textSize="14sp"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toEndOf="@+id/condition_img"
                 app:layout_constraintTop_toTopOf="@+id/condition_img" />
 
